# Swahili-100

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  train.py
alignment/: __init__.py  dpo.py  sft.py
configs/: debug.yaml  swahili_base.yaml  swahili_large.yaml
data/: __init__.py  clean.py  dedup.py  download.py  filter.py  loader.py  tokenizer.py
docs/: COSTS.md  RESEARCH.md  SETUP.md  TRAINING.md
evaluation/: __init__.py  generation.py  ner.py  perplexity.py  sentiment.py  translation.py
model/: __init__.py  attention.py  block.py  config.py  embedding.py  feedforward.py  flash_attention.py  generate.py  lm_head.py  moe.py  norm.py  rope.py  transformer.py
notebooks/: 01_data_exploration.ipynb  02_tokenizer_analysis.ipynb  03_training_colab.ipynb  04_inference_demo.ipynb
quantization/: __init__.py  export_onnx.py  quantize.py
scripts/: align.py  evaluate.py  export.py  generate.py  quantize.py  train.py  train_tokenizer.py
tests/: test_attention.py  test_generation.py  test_model.py  test_optimizer.py  test_tokenizer.py  test_training.py
training/: __init__.py  adamw.py  grad_accumulation.py  grad_checkpoint.py  loss.py  muon.py  precision.py  scheduler.py  trainer.py
utils/: __init__.py  checkpoint.py  distributed.py  logging.py  profiler.py
